// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Calendar /> has defaults 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593327600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593414000000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593500400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1593586800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1593673200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1593759600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1593846000000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1593932400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1594018800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1594105200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1594191600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1594278000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1594364400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1594450800000"
              role="gridcell"
            >
              11
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1594537200000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1594623600000"
              role="gridcell"
            >
              13
            </td>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1594710000000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1594796400000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1594882800000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1594969200000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1595055600000"
              role="gridcell"
            >
              18
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1595142000000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1595228400000"
              role="gridcell"
            >
              20
            </td>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1595314800000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1595401200000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1595487600000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1595574000000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1595660400000"
              role="gridcell"
            >
              25
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1595746800000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1595833200000"
              role="gridcell"
            >
              27
            </td>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1595919600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="highlighted-date"
              data-epoch="1596006000000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1596092400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1596178800000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596265200000"
              role="gridcell"
            >
              1
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596351600000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596438000000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596524400000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596610800000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596697200000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596783600000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1596870000000"
              role="gridcell"
            >
              8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous month 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to May 2020
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          June 2020
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to July 2020
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="May 31"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1590908400000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="June 1"
              aria-selected="false"
              class="date"
              data-epoch="1590994800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="June 2"
              aria-selected="false"
              class="date"
              data-epoch="1591081200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="June 3"
              aria-selected="false"
              class="date"
              data-epoch="1591167600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="June 4"
              aria-selected="false"
              class="date"
              data-epoch="1591254000000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="June 5"
              aria-selected="false"
              class="date"
              data-epoch="1591340400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="June 6"
              aria-selected="false"
              class="date"
              data-epoch="1591426800000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 7"
              aria-selected="false"
              class="date"
              data-epoch="1591513200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="June 8"
              aria-selected="false"
              class="date"
              data-epoch="1591599600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="June 9"
              aria-selected="false"
              class="date"
              data-epoch="1591686000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="June 10"
              aria-selected="false"
              class="date"
              data-epoch="1591772400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="June 11"
              aria-selected="false"
              class="date"
              data-epoch="1591858800000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="June 12"
              aria-selected="false"
              class="date"
              data-epoch="1591945200000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="June 13"
              aria-selected="false"
              class="date"
              data-epoch="1592031600000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 14"
              aria-selected="false"
              class="date"
              data-epoch="1592118000000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="June 15"
              aria-selected="false"
              class="date"
              data-epoch="1592204400000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="June 16"
              aria-selected="false"
              class="date"
              data-epoch="1592290800000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="June 17"
              aria-selected="false"
              class="date"
              data-epoch="1592377200000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="June 18"
              aria-selected="false"
              class="date"
              data-epoch="1592463600000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="June 19"
              aria-selected="false"
              class="date"
              data-epoch="1592550000000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="June 20"
              aria-selected="false"
              class="date"
              data-epoch="1592636400000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 21"
              aria-selected="false"
              class="date"
              data-epoch="1592722800000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="June 22"
              aria-selected="false"
              class="date"
              data-epoch="1592809200000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="June 23"
              aria-selected="false"
              class="date"
              data-epoch="1592895600000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="June 24"
              aria-selected="false"
              class="date"
              data-epoch="1592982000000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="June 25"
              aria-selected="false"
              class="date"
              data-epoch="1593068400000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="June 26"
              aria-selected="false"
              class="date"
              data-epoch="1593154800000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="June 27"
              aria-selected="false"
              class="date"
              data-epoch="1593241200000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="June 28"
              aria-selected="false"
              class="date"
              data-epoch="1593327600000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="June 29"
              aria-selected="false"
              class="date"
              data-epoch="1593414000000"
              role="gridcell"
            >
              29
            </td>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="date"
              data-epoch="1593500400000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593586800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593673200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593759600000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593846000000"
              role="gridcell"
            >
              4
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1593932400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594018800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594105200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594191600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594278000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594364400000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1594450800000"
              role="gridcell"
            >
              11
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`<Calendar /> renders the previous year 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="header"
      >
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to June 2019
          </title>
          <use
            xlink:href="#arrow-left.svg"
          />
        </svg>
        <button
          class="year-button"
        >
          July 2019
          <svg
            class="change-year-icon"
            height="6"
            role="img"
            width="10"
          >
            <use
              xlink:href="#caret-down.svg"
            />
          </svg>
        </button>
        <svg
          class="change-month-button"
          height="8"
          role="button"
          tabindex="0"
          width="12"
        >
          <title>
            Change calendar to August 2019
          </title>
          <use
            xlink:href="#arrow-right.svg"
          />
        </svg>
      </div>
      <table
        class="calendar-grid"
        role="grid"
      >
        <thead>
          <tr>
            <th
              class="weekday"
            >
              S
            </th>
            <th
              class="weekday"
            >
              M
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              W
            </th>
            <th
              class="weekday"
            >
              T
            </th>
            <th
              class="weekday"
            >
              F
            </th>
            <th
              class="weekday"
            >
              S
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              aria-label="June 30"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1561878000000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 1"
              aria-selected="false"
              class="date"
              data-epoch="1561964400000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="July 2"
              aria-selected="false"
              class="date"
              data-epoch="1562050800000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="July 3"
              aria-selected="false"
              class="date"
              data-epoch="1562137200000"
              role="gridcell"
            >
              3
            </td>
            <td
              aria-label="July 4"
              aria-selected="false"
              class="date"
              data-epoch="1562223600000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="July 5"
              aria-selected="false"
              class="date"
              data-epoch="1562310000000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="July 6"
              aria-selected="false"
              class="date"
              data-epoch="1562396400000"
              role="gridcell"
            >
              6
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 7"
              aria-selected="false"
              class="date"
              data-epoch="1562482800000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="July 8"
              aria-selected="false"
              class="date"
              data-epoch="1562569200000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="July 9"
              aria-selected="false"
              class="date"
              data-epoch="1562655600000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="July 10"
              aria-selected="false"
              class="date"
              data-epoch="1562742000000"
              role="gridcell"
            >
              10
            </td>
            <td
              aria-label="July 11"
              aria-selected="false"
              class="date"
              data-epoch="1562828400000"
              role="gridcell"
            >
              11
            </td>
            <td
              aria-label="July 12"
              aria-selected="false"
              class="date"
              data-epoch="1562914800000"
              role="gridcell"
            >
              12
            </td>
            <td
              aria-label="July 13"
              aria-selected="false"
              class="date"
              data-epoch="1563001200000"
              role="gridcell"
            >
              13
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 14"
              aria-selected="false"
              class="date"
              data-epoch="1563087600000"
              role="gridcell"
            >
              14
            </td>
            <td
              aria-label="July 15"
              aria-selected="false"
              class="date"
              data-epoch="1563174000000"
              role="gridcell"
            >
              15
            </td>
            <td
              aria-label="July 16"
              aria-selected="false"
              class="date"
              data-epoch="1563260400000"
              role="gridcell"
            >
              16
            </td>
            <td
              aria-label="July 17"
              aria-selected="false"
              class="date"
              data-epoch="1563346800000"
              role="gridcell"
            >
              17
            </td>
            <td
              aria-label="July 18"
              aria-selected="false"
              class="date"
              data-epoch="1563433200000"
              role="gridcell"
            >
              18
            </td>
            <td
              aria-label="July 19"
              aria-selected="false"
              class="date"
              data-epoch="1563519600000"
              role="gridcell"
            >
              19
            </td>
            <td
              aria-label="July 20"
              aria-selected="false"
              class="date"
              data-epoch="1563606000000"
              role="gridcell"
            >
              20
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 21"
              aria-selected="false"
              class="date"
              data-epoch="1563692400000"
              role="gridcell"
            >
              21
            </td>
            <td
              aria-label="July 22"
              aria-selected="false"
              class="date"
              data-epoch="1563778800000"
              role="gridcell"
            >
              22
            </td>
            <td
              aria-label="July 23"
              aria-selected="false"
              class="date"
              data-epoch="1563865200000"
              role="gridcell"
            >
              23
            </td>
            <td
              aria-label="July 24"
              aria-selected="false"
              class="date"
              data-epoch="1563951600000"
              role="gridcell"
            >
              24
            </td>
            <td
              aria-label="July 25"
              aria-selected="false"
              class="date"
              data-epoch="1564038000000"
              role="gridcell"
            >
              25
            </td>
            <td
              aria-label="July 26"
              aria-selected="false"
              class="date"
              data-epoch="1564124400000"
              role="gridcell"
            >
              26
            </td>
            <td
              aria-label="July 27"
              aria-selected="false"
              class="date"
              data-epoch="1564210800000"
              role="gridcell"
            >
              27
            </td>
          </tr>
          <tr>
            <td
              aria-label="July 28"
              aria-selected="false"
              class="date"
              data-epoch="1564297200000"
              role="gridcell"
            >
              28
            </td>
            <td
              aria-label="July 29"
              aria-selected="false"
              class="date"
              data-epoch="1564383600000"
              role="gridcell"
              tabindex="0"
            >
              29
            </td>
            <td
              aria-label="July 30"
              aria-selected="false"
              class="date"
              data-epoch="1564470000000"
              role="gridcell"
            >
              30
            </td>
            <td
              aria-label="July 31"
              aria-selected="false"
              class="date"
              data-epoch="1564556400000"
              role="gridcell"
            >
              31
            </td>
            <td
              aria-label="August 1"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564642800000"
              role="gridcell"
            >
              1
            </td>
            <td
              aria-label="August 2"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564729200000"
              role="gridcell"
            >
              2
            </td>
            <td
              aria-label="August 3"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564815600000"
              role="gridcell"
            >
              3
            </td>
          </tr>
          <tr>
            <td
              aria-label="August 4"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564902000000"
              role="gridcell"
            >
              4
            </td>
            <td
              aria-label="August 5"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1564988400000"
              role="gridcell"
            >
              5
            </td>
            <td
              aria-label="August 6"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565074800000"
              role="gridcell"
            >
              6
            </td>
            <td
              aria-label="August 7"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565161200000"
              role="gridcell"
            >
              7
            </td>
            <td
              aria-label="August 8"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565247600000"
              role="gridcell"
            >
              8
            </td>
            <td
              aria-label="August 9"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565334000000"
              role="gridcell"
            >
              9
            </td>
            <td
              aria-label="August 10"
              aria-selected="false"
              class="not-current-date"
              data-epoch="1565420400000"
              role="gridcell"
            >
              10
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
